lang/tests/contract/ui/fail/14-abi-function.rs
use liquid_lang as liquid;

#[liquid::contract]
mod noop {
    #[liquid(storage)]
    struct Noop {}

    #[liquid(methods)]
    impl Noop {
        pub fn new(&mut self) {}

        pub extern "C" fn noop(&self) {}
    }
}

fn main() {}
