lang/tests/contract/ui/fail/14-abi-function.stderr
error: specifying ABI is not supported for methods in contract
  --> $DIR/14-abi-function.rs:12:13
   |
12 |         pub extern "C" fn noop(&self) {}
   |             ^^^^^^^^^^
